# Advent-of-Code

./: .gitignore  advent-of-code.cabal
day1/: Day1.v  Makefile  main.hs
day4/: main  main.hs
day5/: main.hs
src/: Common.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day4.hs  Day5.hs  Day6.hs  Day8.hs  Day9.hs  Main.hs
