cabal-version:       >=1.10
name:                advent-of-code
version:             0.1.0.0
synopsis:            My solutions to Advent of Code 2020
license-file:        LICENSE
author:              Michalis Pardalos
maintainer:          m.pardalos@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable aoc
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Common
    Day4
    Day5
    Day6
  build-depends:
    base >=4.13 && <4.15, parsec, containers, directory, split
  default-language:    Haskell2010
