cabal-version:       >=1.10
name:                advent-of-code
version:             0.1.0.0
synopsis:            My solutions to Advent of Code 2020
author:              Michalis Pardalos
maintainer:          m.pardalos@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable aoc
  ghc-options: -threaded
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Common
    Day4
    Day5
    Day6
    Day8
    Day9
    Day10
    Day11
  build-depends:
    base >=4.13 && <4.15, parsec, containers, directory, split, mtl, optparse-applicative,
    vty
  default-language:    Haskell2010
